tests/testFiles/semanticErrors/giveobjmethodsofsamename.meme
wow a {
  such () {
  }
  so shine () {
  }
  so shine () {
  }
}
